--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <left>
-      <div class="head_title">@Thawatchai test</div>
+      <div class="head_title">@Thawatchai</div>
       <div class="head_title2">WELCOME TO MY STORY</div>
       <br>
     <div class="container">
