--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=0.5"/>
     <link rel="stylesheet" href="style.css" />
     <title>My_Story_Expanding_cards</title>
   </head>
 
   <body>
     <left>
-      <div class="head_title">@Thawatchai</div>
+      <div class="head_title">@ThawatchaiTest</div>
       <div class="head_title2">WELCOME TO MY STORY</div>
       <br>
     <div class="container">
